kubernetes/helm/resources/gateway-api-operator-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-demo
  labels:
    app.kubernetes.io/part-of: gateway-api-operator-demo
